@@ -1,5 +1,5 @@
 /*
- * Copyright 2009 Brian Pellin.
+ * Copyright 2009-2013 Brian Pellin.
  *     
  * This file is part of KeePassDroid.
  *
@@ -24,5 +24,5 @@ public class Intents {
 	public static final String COPY_USERNAME = "com.keepassdroid.copy_username";
 	public static final String COPY_PASSWORD = "com.keepassdroid.copy_password";
 
-	public static final String FILE_BROWSE = "org.openintents.action.PICK_FILE";
+	public static final String OPEN_INTENTS_FILE_BROWSE = "org.openintents.action.PICK_FILE";
 }
