@@ -1,3 +1,4 @@
+ * Support more generic file picker intents
  * Update Finnish translations.
  * Update Hungarian translations
 
